<?xml version="1.0" encoding="utf-8"?>
<io.relayr.iotsmartphone.widget.SendReceiveView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/publish_title"
        style="@style/TitleText"
        android:drawablePadding="@dimen/default_padding"
        android:drawableRight="@drawable/ic_settings"
        android:paddingBottom="@dimen/default_padding"
        android:text="@string/sv_publish_title"/>

    <TextView
        style="@style/NormalText"
        android:singleLine="false"
        android:text="@string/sv_publish_info"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/send_wifi_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_wifi"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_publish_wifi"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/send_battery_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_battery"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_publish_battery"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/send_location_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_publish_location"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/send_acceleration_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_acceleration"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_publish_acceleration"/>

    <RelativeLayout
        style="@style/SettingsSwitch">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/ic_message"
            android:drawablePadding="@dimen/default_padding"
            android:hint="@string/sv_publish_message_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="@dimen/normal_text"/>

        <ImageView
            android:id="@+id/message_send"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/default_padding"
            android:src="@drawable/action_send_inactive"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/dashboard_data"
        style="@style/NormalText"
        android:drawablePadding="@dimen/default_padding"
        android:drawableRight="@drawable/ic_cloud"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/srv_open_dashboard"/>

    <TextView
        style="@style/TitleText"
        android:paddingBottom="@dimen/default_padding"
        android:text="@string/sv_subscribe_title"/>

    <TextView
        style="@style/NormalText"
        android:singleLine="false"
        android:text="@string/sv_subscribe_info"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/receive_flash_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_flash"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_subscribe_flash"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/receive_sound_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_sound"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_subscribe_sound"/>

    <TextView
        style="@style/TitleText"
        android:paddingBottom="@dimen/default_padding"
        android:text="@string/sv_wearable_title"/>

    <TextView
        style="@style/NormalText"
        android:singleLine="false"
        android:text="@string/sv_wearable_info"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/wearable_switch"
        style="@style/SettingsSwitch"
        android:drawableLeft="@drawable/ic_wearable"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:text="@string/sv_wearable_data"/>
</io.relayr.iotsmartphone.widget.SendReceiveView>
