<?xml version="1.0" encoding="utf-8"?>
<io.relayr.iotsmartphone.ui.readings.SamplingDialog
    style="@style/MatchWrap"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/big_padding"
    android:padding="@dimen/default_padding">

    <LinearLayout
        style="@style/MatchWrapHor"
        android:layout_height="@dimen/dialog_item_height"
        android:layout_marginTop="@dimen/default_padding">

        <TextView
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:gravity="right"
            android:paddingRight="@dimen/default_padding_double"
            android:text="@string/dialog_unit"
            android:textColor="@color/accent"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/graph_blue"/>

        <TextView
            android:id="@+id/dialog_unit"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="40"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="Unit"
            android:textColor="@color/accent"/>
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrapHor"
        android:layout_height="@dimen/dialog_item_height"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/default_padding">

        <TextView
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:gravity="right"
            android:paddingRight="@dimen/default_padding_double"
            android:text="@string/dialog_identifier"
            android:textColor="@color/accent"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/graph_red"/>

        <TextView
            android:id="@+id/dialog_identifier"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="40"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="Id"
            android:textColor="@color/accent"/>
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrapHor"
        android:layout_height="@dimen/dialog_item_height"
        android:layout_marginTop="@dimen/default_padding">

        <TextView
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:gravity="right"
            android:paddingRight="@dimen/default_padding_double"
            android:text="@string/dialog_sampling"
            android:textColor="@color/accent"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/graph_green"/>

        <RelativeLayout
            style="@style/MatchMatchHor"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:background="@color/primary"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <TextView
                android:id="@+id/sampling_low"
                style="@style/SmallText"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:text="low"/>

            <SeekBar
                android:id="@+id/sampling_seek"
                style="@style/MatchWrap"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/sampling_info"
                style="@style/SmallText"
                android:layout_below="@id/sampling_seek"
                android:layout_centerHorizontal="true"
                android:textColor="@color/accent"/>

            <TextView
                android:id="@+id/sampling_high"
                style="@style/SmallText"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrapHor"
        android:layout_height="@dimen/dialog_item_height"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center_vertical">

        <TextView
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:gravity="right"
            android:paddingRight="@dimen/default_padding_double"
            android:text="@string/dialog_data"
            android:textColor="@color/accent"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/graph_yellow"/>

        <LinearLayout
            style="@style/MatchMatchHor"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:background="@color/primary"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <TextView
                android:id="@+id/cloud_local"
                style="@style/NormalText"
                android:text="@string/dialog_keep_local"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/cloud_upload"
                style="@style/NormalText"
                android:gravity="center_vertical"
                app:switchPadding="@dimen/default_padding"/>

            <TextView
                android:id="@+id/cloud_uploading"
                style="@style/NormalText"
                android:text="@string/dialog_send_to_the_cloud"/>
        </LinearLayout>
    </LinearLayout>
</io.relayr.iotsmartphone.ui.readings.SamplingDialog>
